--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,51 @@
     background-clip:text;
     -webkit-text-fill-color: transparent;
 }
+.App-body{
+    /* display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 2vw;
+    grid-auto-flow: column;
+    grid-row-gap: 2vh; */
+    height:90vh;
+    padding:4vh 2vw 2vh 2vw;
+
+    position: relative;
+}
+.App-widget{
+    border:1px solid rebeccapurple;
+    overflow:hidden;
+    border-radius:15px;
+
+    position: absolute;
+    width:23%;
+    height:46%;
+    box-shadow:1px 1px 1px 1px rgba(0,0,0,0.0);
+    transition:0.3s all ease-in-out;   
+    cursor:pointer;
+    background:#FFF;
+}
+.App-widget:not(.Opened):hover{
+    box-shadow:0px 1px 4px 1px rgba(0,0,0,0.5);
+    transform:translateY(-2px);
+}
+.App-widget:nth-child(1){ left:2%; right:2%; top:2%; bottom: 2%}
+.App-widget:nth-child(2){ left:26.33%; right:2%; top:2%; bottom: 2%}
+.App-widget:nth-child(3){ left:50.66%; right:2%; top:2%; bottom: 2%}
+.App-widget:nth-child(4){ left:74.99%; right:2%; top:2%; bottom: 2%}
+.App-widget:nth-child(5){ left:2%; right:2%; top:50%; bottom: 2%}
+.App-widget:nth-child(6){ left:26.33%; right:2%; top:50%; bottom: 2%}
+.App-widget:nth-child(7){ left:50.66%; right:2%; top:50%; bottom: 2%}
+.App-widget:nth-child(8){ left:74.99%; right:2%; top:50%; bottom: 2%}
+
+.App-widget.Opened{
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    width:100%;
+    height:100%;
+    z-index:9999;
+    border-radius:0;
+}
